--- a/assets/css/cad.css
+++ b/assets/css/cad.css
@@ -63,6 +63,7 @@ nav ul li a:hover{
   margin: 0 auto;
   margin-top: -20%;
   border-radius: 51px;
+  border: 2px solid rgb(0, 0, 0);
 }
 
 #titulo-cad{
