--- a/assets/css/cad.css
+++ b/assets/css/cad.css
@@ -12,17 +12,20 @@ body{
 .area-form {
   width: 574px;
   height: 430px;  
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(41, 39, 39);
   margin: 0 auto;
   margin-top: -15%;
   border-radius: 51px;
-  border: 2px solid rgb(0, 0, 0);
 }
+
 
 #titulo-cad{
   font-size: 20px;
   text-align: center;
   padding: 30px;
+  opacity: 1;
+  filter: none;
+  color: #ffffff;
 }
 
 .group{ 
@@ -30,6 +33,7 @@ body{
   margin-bottom:45px; 
   display:flex;
   justify-content: center;
+  
 }
 
 #nome{
@@ -38,7 +42,7 @@ body{
   display:block;
   width:300px;
   border:none;
-  border-bottom:1px solid #757575;
+  border-bottom:1px solid rgb(255, 255, 255);
 }
 
 #nome:focus{
@@ -51,7 +55,8 @@ body{
   display:block;
   width:300px;
   border:none;
-  border-bottom:1px solid #757575;
+  border-bottom:1px solid rgb(255, 255, 255);
+  filter: none;
 }
 
 #preco:focus{
@@ -61,7 +66,7 @@ body{
 #label{
   display: flex;
   justify-content: center;
-  color: #999;
+  color: #ffffff;
   font-size: 18px;
   font-weight: normal;
   position: absolute;
@@ -78,13 +83,12 @@ body{
 #nome:focus ~ #label, #nome:valid ~ #label{
   top:-20px;
   font-size:14px;
-  color:#192fa9;
+
 }
 
 #preco:focus ~ #label, #preco:valid ~ #label{
   top:-20px;
   font-size:14px;
-  color:#192fa9;
 }
 
 .centraliza-form{
@@ -114,4 +118,9 @@ body{
   border: none;
   background-color: #1A2560;
   color: #ffffff;
+}
+
+input{
+  color: #ffffff;
+  background-color: rgb(41, 39, 39);
 }
