--- a/assets/css/caixa.css
+++ b/assets/css/caixa.css
@@ -8,3 +8,38 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.area-conta{
+    background-color: rgba(255, 255, 255, 0.75);
+    width: 574px;
+    height: 600px;  
+    margin: 0 auto;
+    margin-top: 4%;
+    border-radius: 51px;
+    box-shadow: 5px 5px 5px #010509;
+}
+
+.a1{
+    display: flex;
+    justify-content: space-between;
+    padding: 45px;
+
+}
+
+.a2{
+    display: flex;
+    justify-content: space-between;
+    padding: 45px;
+}
+
+.a3{
+    display: flex;
+    justify-content: space-between;
+    padding: 45px;
+}
+
+
+.a4{
+    display: flex;
+    justify-content: space-between;
+    padding: 45px;
+}
