--- a/assets/css/cad.css
+++ b/assets/css/cad.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+body{
+  font-family: FreeMono, monospace;
+  background-size: cover;
+}
+
 
 .area-form {
   background-color: rgba(255, 255, 255, 0.75);
